# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2023 Sartura Ltd.

sources += files('cnet_ipv6.c', 'ip6_input.c', 'ip6_output.c', 'ip6_forward.c', 'ip6_proto.c', 'ip6_flowlabel.c')
headers += files('cnet_ipv6.h', 'ip6_input_priv.h', 'ip6_output_priv.h', 'ip6_forward_priv.h', 'ip6_proto_priv.h', 'ip6_node_api.h', 'ip6_flowlabel.h')
